--- a/config/institutions.yaml
+++ b/config/institutions.yaml
@@ -2,6 +2,7 @@ timezone: "Europe/Madrid"
 
 institutions:
   - id: "mpm"
+    enabled: true
     name: "Museo Picasso Málaga"
     type: "Museo de arte"
     base_url: "https://www.museopicassomalaga.org/"
@@ -12,6 +13,7 @@ institutions:
     rss_activities_url: ""
 
   - id: "thyssen"
+    enabled: true
     name: "Museo Carmen Thyssen Málaga"
     type: "Museo de arte"
     base_url: "https://carmenthyssenmalaga.org/"
@@ -20,35 +22,3 @@ institutions:
     activities_url: "https://carmenthyssenmalaga.org/actividades"
     rss_exhibitions_url: ""
     rss_activities_url: ""
-
-  - id: "pompidou"
-    name: "Centre Pompidou Málaga"
-    type: "Museo de arte moderno"
-    base_url: "https://centrepompidou-malaga.eu/"
-    tickets_url: "https://centrepompidou-malaga.eu/plan-your-visit/"
-    exhibitions_url: "https://centrepompidou-malaga.eu/exposiciones/"
-    activities_url: "https://centrepompidou-malaga.eu/events/"
-    rss_exhibitions_url: ""
-    rss_activities_url: ""
-
-  - id: "museomalaga"
-    name: "Museo de Málaga"
-    type: "Museo de Málaga"
-    base_url: "https://www.museosdeandalucia.es/web/museodemalaga"
-    tickets_url: "https://www.museosdeandalucia.es/web/museodemalaga/informacion-general"
-    exhibitions_url: "https://www.museosdeandalucia.es/web/museodemalaga"
-    activities_url: ""
-    rss_exhibitions_url: ""
-    rss_activities_url: ""
-
-  - id: "casanatal"
-    name: "Museo Picasso – Casa Natal"
-    type: "Museo (casa natal de Picasso)"
-    base_url: "https://museocasanatalpicasso.malaga.eu/"
-    tickets_url: "https://museocasanatalpicasso.malaga.eu/Visita/horarios-y-tarifas/"
-    exhibitions_url: "https://museocasanatalpicasso.malaga.eu/exposiciones/"
-    activities_url: "https://museocasanatalpicasso.malaga.eu/actividades/"
-    rss_exhibitions_url: ""
-    rss_activities_url: ""
-
-permanents:
