--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -27,6 +27,7 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}
         run: python scripts/collect.py
+        run: python -m scripts.collect
 
       - name: Commit & push build
         run: |
