--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -2,7 +2,7 @@ name: Collect cultural events
 
 on:
   schedule:
-    # Cron en UTC. 04:00 UTC ≈ 06:00 Europe/Madrid (verano).
+    # 04:00 UTC ≈ 06:00 Europe/Madrid (verano). Ajusta si quieres.
     - cron: '0 4 * * *'
   workflow_dispatch:
 
@@ -21,7 +21,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
@@ -32,12 +33,22 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 🔹 1) Sincroniza ANTES de generar nada (working tree limpio)
+      - name: Sync branch (pre-collect)
+        run: |
+          set -e
+          BRANCH="${GITHUB_REF_NAME:-main}"
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          git fetch origin "$BRANCH"
+          git pull --rebase --autostash origin "$BRANCH"
+
       - name: Run collector
         env:
           PYTHONPATH: .
         run: |
           python -m scripts.collect
 
+      # 🔹 2) Commitea primero; así el rebase no falla por "unstaged changes"
       - name: Commit & push changes
         run: |
           set -e
@@ -46,13 +57,17 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git fetch origin "$BRANCH"
-          git pull --rebase origin "$BRANCH"
-
           git add data/events.json data/meta.json || true
-          if ! git diff --cached --quiet; then
-            git commit -m "chore: update events.json [skip ci]"
-            git push origin HEAD:"$BRANCH"
-          else
+
+          if git diff --cached --quiet; then
             echo "No changes to commit"
+            exit 0
           fi
+
+          git commit -m "chore: update events.json [skip ci]"
+
+          # Rebase por si hubo pushes durante la ejecución
+          git fetch origin "$BRANCH"
+          git pull --rebase --autostash origin "$BRANCH"
+
+          git push origin HEAD:"$BRANCH"
