--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -1,73 +1,150 @@
-name: Collect cultural events
+# -*- coding: utf-8 -*-
+"""
+Collector orchestrator.
+- Lee config/institutions.yaml
+- Ejecuta scrapers activos
+- Fusiona con manual_events.json (manual > scraper)
+- Escribe data/events.json y data/meta.json
+- Imprime conteo por tipo (exhibition/activity) para depurar
+"""
+import os, sys, json, importlib, yaml
+from copy import deepcopy
+from datetime import datetime, timezone
 
-on:
-  schedule:
-    # 04:00 UTC ≈ 06:00 Europe/Madrid (verano). Ajusta si quieres.
-    - cron: '0 4 * * *'
-  workflow_dispatch:
+# --- Rutas base --------------------------------------------------------------
+ROOT = os.path.dirname(os.path.dirname(__file__))
 
-permissions:
-  contents: write
+# Asegura que el paquete 'scrapers' se pueda importar
+if ROOT not in sys.path:
+    sys.path.insert(0, ROOT)
 
-concurrency:
-  group: collect
-  cancel-in-progress: true
+CONFIG_PATH = os.path.join(ROOT, "config", "institutions.yaml")
+DATA_DIR = os.path.join(ROOT, "data")
+EVENTS_PATH = os.path.join(DATA_DIR, "events.json")
+MANUAL_PATH = os.path.join(DATA_DIR, "manual_events.json")
+META_PATH = os.path.join(DATA_DIR, "meta.json")
 
-jobs:
-  collect:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+# --- Utilidades --------------------------------------------------------------
+def sha1(s: str) -> str:
+    import hashlib
+    return hashlib.sha1(s.encode("utf-8")).hexdigest()
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: 'pip'
-          cache-dependency-path: 'requirements.txt'
+def load_yaml(path):
+    with open(path, "r", encoding="utf-8") as f:
+        return yaml.safe_load(f)
 
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+def ensure_data_files():
+    os.makedirs(DATA_DIR, exist_ok=True)
+    if not os.path.exists(MANUAL_PATH):
+        with open(MANUAL_PATH, "w", encoding="utf-8") as f:
+            json.dump([], f, ensure_ascii=False, indent=2)
+    if not os.path.exists(EVENTS_PATH):
+        with open(EVENTS_PATH, "w", encoding="utf-8") as f:
+            json.dump([], f, ensure_ascii=False, indent=2)
 
-      # 🔹 1) Sincroniza ANTES de generar nada (working tree limpio)
-      - name: Sync branch (pre-collect)
-        run: |
-          set -e
-          BRANCH="${GITHUB_REF_NAME:-main}"
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          git fetch origin "$BRANCH"
-          git pull --rebase --autostash origin "$BRANCH"
+def key_for_event(e: dict) -> str:
+    parts = [e.get("type",""), e.get("institution_id","")]
+    if e.get("url"):
+        parts.append(e["url"])
+    else:
+        parts.append(e.get("title",""))
+    # date or datetime
+    if e.get("type") == "exhibition":
+        parts.append(e.get("date_start",""))
+        parts.append(e.get("date_end",""))
+    else:
+        parts.append(e.get("datetime_start",""))
+        parts.append(e.get("datetime_end",""))
+    return "|".join(parts).lower()
 
-      - name: Run collector
-        env:
-          PYTHONPATH: .
-        run: |
-          python -m scripts.collect
+def normalize_event(e: dict) -> dict:
+    e = deepcopy(e)
+    e.setdefault("status", "scheduled")
+    e.setdefault("source", "scraper")
+    e.setdefault("last_seen_at", datetime.now(timezone.utc).isoformat())
+    e.setdefault("city", "Málaga")
+    e.setdefault("schema_version", "1")
+    if not e.get("id"):
+        e["id"] = sha1(key_for_event(e))
+    return e
 
-      # 🔹 2) Commitea primero; así el rebase no falla por "unstaged changes"
-      - name: Commit & push changes
-        run: |
-          set -e
-          BRANCH="${GITHUB_REF_NAME:-main}"
+def merge_events(scraped: list, manual: list) -> list:
+    by_id = {}
+    for e in scraped:
+        ne = normalize_event(e)
+        by_id[ne["id"]] = ne
+    for m in manual:
+        nm = normalize_event(m)
+        # manual overrides scraper
+        if nm["id"] in by_id:
+            by_id[nm["id"]].update({k: v for k, v in nm.items() if k not in ("source","schema_version")})
+        else:
+            by_id[nm["id"]] = nm
+    # orden por fecha y título
+    return sorted(
+        by_id.values(),
+        key=lambda x: (x.get("date_start") or x.get("datetime_start") or "9999", x.get("title",""))
+    )
 
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+# --- Main --------------------------------------------------------------------
+def main():
+    ensure_data_files()
+    cfg = load_yaml(CONFIG_PATH)
 
-          git add data/events.json data/meta.json || true
+    scraped = []
+    active = 0
 
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-            exit 0
-          fi
+    for inst in cfg.get("institutions", []):
+        if not inst.get("enabled"):
+            continue
+        active += 1
 
-          git commit -m "chore: update events.json [skip ci]"
+        scraper_mod = f"scrapers.{inst['id']}"
+        try:
+            mod = importlib.import_module(scraper_mod)
+        except Exception as e:
+            print(f"[WARN] Cannot import {scraper_mod}: {e}")
+            continue
 
-          # Rebase por si hubo pushes durante la ejecución
-          git fetch origin "$BRANCH"
-          git pull --rebase --autostash origin "$BRANCH"
+        try:
+            res = mod.collect(inst)
+            scraped.extend(res)
 
-          git push origin HEAD:"$BRANCH"
+            # Conteo por tipo para depurar en Actions
+            by_type = {}
+            for ev in res:
+                t = ev.get('type','?')
+                by_type[t] = by_type.get(t, 0) + 1
+            print(f"[OK] {inst['id']} -> {len(res)} events (by type: {by_type})")
+
+        except Exception as e:
+            print(f"[ERROR] {inst['id']} scraper failed: {e}")
+            continue
+
+    # Cargar manual
+    try:
+        with open(MANUAL_PATH, "r", encoding="utf-8") as f:
+            manual = json.load(f)
+    except Exception:
+        manual = []
+
+    merged = merge_events(scraped, manual)
+
+    # Escribir events.json
+    with open(EVENTS_PATH, "w", encoding="utf-8") as f:
+        json.dump(merged, f, ensure_ascii=False, indent=2)
+
+    meta = {
+        "generated_at": datetime.now(timezone.utc).isoformat(),
+        "active_institutions": active,
+        "counts": {
+            "total": len(merged),
+            "scraped": len(scraped),
+            "manual": max(0, len(merged) - len(scraped))
+        }
+    }
+    with open(META_PATH, "w", encoding="utf-8") as f:
+        json.dump(meta, f, ensure_ascii=False, indent=2)
+
+if __name__ == "__main__":
+    raise SystemExit(main())
