--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -65,7 +65,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add data/events.json data/meta.json || true
+          git add data || true
 
           if git diff --cached --quiet; then
             echo "No changes to commit"
